--- a/.gitmodules
+++ b/.gitmodules
@@ -10,7 +10,8 @@
 	url = https://github.com/glfw/glfw.git
 [submodule "deps/cimgui"]
 	path = deps/cimgui
-	url = https://github.com/Inochi2D/cimgui.git
+	url = https://github.com/AliceMousie/cimgui.git
+	branch = main
 [submodule "deps/freetype"]
 	path = deps/freetype
 	url = https://github.com/freetype/freetype.git
